# clearml-mcp

./: .pre-commit-config.yaml  CLAUDE.md  Dockerfile  GOALS.md  README.md  pyproject.toml
.cursor/rules/: linting-philosophy.mdc  testing-philosophy.mdc
.github/workflows/: ci.yml
.specstory/history/: 2025-07-12_19-35Z-update-goals-for-clearml-mcp-repo.md  2025-07-13_00-37Z-create-github-action-for-tests.md
docs/: license.md
examples/: 03_find_real_experiments.py  04_quick_scalar_demo.py  README.md  consolidated_debugger.py
examples/smolagents_example/: clearml_analysis_agent.py  experiment_debugger.py  find_real_experiments.py  openai_compatible_example.py  realistic_debugging_demo.py  requirements.txt  simple_example.py
src/clearml_mcp/: clearml_mcp.py
tests/: test_clearml_mcp.py
